fix(bpmnjs): add z-index to make overlay appear above svg
related to OPT-1398

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -54,8 +54,15 @@ a:visited {
 }
 
 /* BPMNjs viewer */
-.djs-container svg {
-  position: absolute; // Safari fix
+.djs-container {
+  svg {
+    position: absolute; // Safari fix
+    z-index: 1;
+  }
+
+  .djs-overlay-container {
+    z-index: 2;
+  }
 }
 
 /* TYPOGRAPHY */
